--- a/esp-hal-common/Cargo.toml
+++ b/esp-hal-common/Cargo.toml
@@ -32,7 +32,7 @@ procmacros           = { version = "0.6.0", package = "esp-hal-procmacros", path
 strum                = { version = "0.25.0", default-features = false, features = ["derive"] }
 void                 = { version = "1.0.2", default-features = false }
 usb-device           = { version = "0.2.9", optional = true }
-frunk 		     = { version = "0.4.2", default-features = false, optional = true }
+frunk 		     = { version = "0.4.2", git = "https://github.com/Ben-PH/frunk-contrib.git", branch = "feature/list_build", default-features = false, optional = true }
 
 
 # async
