--- a/esp-wifi/Cargo.toml
+++ b/esp-wifi/Cargo.toml
@@ -12,11 +12,7 @@ esp32c6-hal = { workspace = true, optional = true }
 esp32-hal = { workspace = true, optional = true }
 esp32s3-hal = { workspace = true, optional = true }
 esp32s2-hal = { workspace = true, optional = true }
-esp32c3 = { workspace = true, optional = true }
-esp32c2 = { workspace = true, optional = true }
-esp32c6 = { workspace = true, optional = true }
 smoltcp = { workspace = true, optional = true }
-esp-hal-common = { workspace = true, optional = true }
 critical-section.workspace = true
 atomic-polyfill.workspace = true
 log = { workspace = true, optional = true }
@@ -38,12 +34,12 @@ toml-cfg.workspace = true
 default = [ "utils", "log" ]
 
 # chip features
-esp32c3 = [ "esp32c3-hal", "dep:esp32c3", "esp-wifi-sys/esp32c3", "esp-hal-common/esp32c3" ]
-esp32c2 = [ "esp32c2-hal", "dep:esp32c2", "esp-wifi-sys/esp32c2", "esp-hal-common/esp32c2" ]
-esp32c6 = [ "esp32c6-hal", "dep:esp32c6", "esp-wifi-sys/esp32c6", "esp-hal-common/esp32c6" ]
-esp32 = [ "esp32-hal",  "esp-wifi-sys/esp32", "esp-hal-common/esp32" ]
-esp32s3 = [ "esp32s3-hal", "esp-wifi-sys/esp32s3", "esp-hal-common/esp32s3" ]
-esp32s2 = [ "esp32s2-hal", "esp-wifi-sys/esp32s2", "esp-hal-common/esp32s2" ]
+esp32c2 = [ "esp32c2-hal", "esp-wifi-sys/esp32c2" ]
+esp32c3 = [ "esp32c3-hal", "esp-wifi-sys/esp32c3" ]
+esp32c6 = [ "esp32c6-hal", "esp-wifi-sys/esp32c6" ]
+esp32 = [ "esp32-hal",  "esp-wifi-sys/esp32" ]
+esp32s2 = [ "esp32s2-hal", "esp-wifi-sys/esp32s2" ]
+esp32s3 = [ "esp32s3-hal", "esp-wifi-sys/esp32s3" ]
 
 # async features
 async = [
