--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -489,15 +489,15 @@ jobs:
 
       # Verify the MSRV for all RISC-V chips.
       - name: msrv (esp32c2-hal)
-        run: cd esp32c2-hal/ && RUSTC_BOOTSTRAP=1 && cargo check --features=eh1,ufmt,log
+        run: cd esp32c2-hal/ && RUSTC_BOOTSTRAP=1 cargo check --features=eh1,ufmt,log
       - name: msrv (esp32c3-hal)
-        run: cd esp32c3-hal/ && RUSTC_BOOTSTRAP=1 && cargo check --features=eh1,ufmt,log
+        run: cd esp32c3-hal/ && RUSTC_BOOTSTRAP=1 cargo check --features=eh1,ufmt,log
       - name: msrv (esp32c6-hal)
-        run: cd esp32c6-hal/ && RUSTC_BOOTSTRAP=1 && cargo check --features=eh1,ufmt,log
+        run: cd esp32c6-hal/ && RUSTC_BOOTSTRAP=1 cargo check --features=eh1,ufmt,log
       - name: msrv (esp32c6-lp-hal)
-        run: cd esp32c6-lp-hal/ && RUSTC_BOOTSTRAP=1 && cargo check
+        run: cd esp32c6-lp-hal/ && RUSTC_BOOTSTRAP=1 cargo check
       - name: msrv (esp32h2-hal)
-        run: cd esp32h2-hal/ && RUSTC_BOOTSTRAP=1 && cargo check --features=eh1,ufmt,log
+        run: cd esp32h2-hal/ && RUSTC_BOOTSTRAP=1 cargo check --features=eh1,ufmt,log
 
   msrv-xtensa:
     runs-on: ubuntu-latest
