--- a/esp32c3-hal/Cargo.toml
+++ b/esp32c3-hal/Cargo.toml
@@ -107,5 +107,13 @@ name              = "embassy_i2c"
 required-features = ["embassy", "async"]
 
 [[example]]
+name              = "embassy_rmt_tx"
+required-features = ["embassy", "async"]
+
+[[example]]
+name              = "embassy_rmt_rx"
+required-features = ["embassy", "async"]
+
+[[example]]
 name = "direct-vectoring"
 required-features = ["direct-vectoring"]
