--- a/esp32h2-hal/Cargo.toml
+++ b/esp32h2-hal/Cargo.toml
@@ -101,6 +101,14 @@ name              = "embassy_wait"
 required-features = ["async", "embassy"]
 
 [[example]]
+name              = "embassy_rmt_tx"
+required-features = ["embassy", "async"]
+
+[[example]]
+name              = "embassy_rmt_rx"
+required-features = ["embassy", "async"]
+
+[[example]]
 name              = "interrupt_preemption"
 required-features = ["interrupt-preemption"]
 
