--- a/esp32c6-lp-hal-procmacros/Cargo.toml
+++ b/esp32c6-lp-hal-procmacros/Cargo.toml
@@ -30,3 +30,5 @@ proc-macro-error = "1.0.4"
 proc-macro2      = "1.0.63"
 quote            = "1.0.28"
 syn              = {version = "2.0.22", features = ["extra-traits", "full"]}
+# toml_edit is a dependency of proc-macro-crate. Unfortunately they raised their MSRV on 0.19.15 so we pin the version for now
+toml_edit        = "=0.19.14"
