--- a/esp32c6-lp-hal-procmacros/Cargo.toml
+++ b/esp32c6-lp-hal-procmacros/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "esp32c6-lp-hal-procmacros"
-version = "0.1.0"
-edition = "2021"
-rust-version = "1.65.0"
-description  = "HAL for ESP32-C6's low-power coprocessor"
+name         = "esp32c6-lp-hal-procmacros"
+version      = "0.1.0"
+edition      = "2021"
+rust-version = "1.67.0"
+description  = "Procedural macros for the ESP32-C6's LP coprocessor"
 repository   = "https://github.com/esp-rs/esp-hal"
 license      = "MIT OR Apache-2.0"
 
@@ -24,11 +24,10 @@ categories = [
 proc-macro = true
 
 [dependencies]
-litrs = "0.4.0"
+litrs            = "0.4.0"
 proc-macro-crate = "1.3.1"
 proc-macro-error = "1.0.4"
 proc-macro2      = "1.0.63"
 quote            = "1.0.28"
 syn              = {version = "2.0.22", features = ["extra-traits", "full"]}
-# toml_edit is a dependency of proc-macro-crate. Unfortunately they raised their MSRV on 0.19.15 so we pin the version for now
-toml_edit        = "=0.19.14"
+toml_edit        = "0.20.0"
