build: Update esp32s3 pacs

--- a/esp-hal-common/Cargo.toml
+++ b/esp-hal-common/Cargo.toml
@@ -63,9 +63,7 @@ esp32c6 = { version = "0.7.0",  features = ["critical-section"], optional = true
 # until new H2 pacs are relesed, required because of https://github.com/esp-rs/esp-pacs/pull/156
 esp32h2 = { git = "https://github.com/esp-rs/esp-pacs.git", rev = "2545b66f4c11dd78dc02a3c77c44a78fa5893beb",  features = ["critical-section"], optional = true }
 esp32s2 = { version = "0.17.0", features = ["critical-section"], optional = true }
-esp32s3 = { git = "https://github.com/SergioGasquez/esp-pacs", branch = "fix/sha-regs", features = [
-    "critical-section",
-], optional = true }
+esp32s3 = { git = "https://github.com/esp-rs/esp-pacs", rev = "c1283ca", features = ["critical-section",], optional = true }
 
 [build-dependencies]
 basic-toml = "0.1.4"
