--- a/esp32c2-hal/Cargo.toml
+++ b/esp32c2-hal/Cargo.toml
@@ -36,7 +36,7 @@ embedded-hal-1     = { version = "=1.0.0-rc.1", package = "embedded-hal" }
 embedded-hal-async = "=1.0.0-rc.1"
 embedded-io-async  = "0.5.0"
 esp-backtrace      = { version = "0.8.0", features = ["esp32c2", "panic-handler", "exception-handler", "print-uart"] }
-esp-println        = { version = "0.6.0", features = ["esp32c2", "log"] }
+esp-println        = { version = "0.6.0", features = ["esp32c2"] }
 heapless           = "0.7.16"
 lis3dh-async       = "0.8.0"
 sha2               = { version = "0.10.7", default-features = false}
@@ -52,12 +52,12 @@ p256              = {version = "0.13.2", default-features = false, features = ["
 default              = ["rt", "vectored", "xtal-40mhz"]
 async                = ["esp-hal-common/async"]
 debug                = ["esp-hal-common/debug"]
-defmt                = ["esp-hal-common/defmt"]
+defmt                = ["esp-hal-common/defmt", "esp-println/defmt"]
 direct-boot          = ["esp-hal-common/rv-init-data"]
 direct-vectoring     = ["esp-hal-common/direct-vectoring"]
 eh1                  = ["esp-hal-common/eh1"]
 interrupt-preemption = ["esp-hal-common/interrupt-preemption"]
-log                  = ["esp-hal-common/log"]
+log                  = ["esp-hal-common/log", "esp-println/log"]
 rt                   = []
 ufmt                 = ["esp-hal-common/ufmt"]
 vectored             = ["esp-hal-common/vectored"]
