--- a/esp32s3-hal/Cargo.toml
+++ b/esp32s3-hal/Cargo.toml
@@ -44,7 +44,7 @@ embedded-io-async  = "0.5.0"
 esp-alloc          = "0.3.0"
 esp-backtrace      = { version = "0.8.0", features = ["esp32s3", "panic-handler", "exception-handler", "print-uart"] }
 esp-hal-smartled   = { version = "0.5.0", features = ["esp32s3"], path = "../esp-hal-smartled" }
-esp-println        = { version = "0.6.0", features = ["esp32s3", "log"] }
+esp-println        = { version = "0.6.0", features = ["esp32s3"] }
 heapless           = "0.7.16"
 hmac               = { version = "0.12.1", default-features = false }
 lis3dh-async       = "0.8.0"
@@ -59,10 +59,10 @@ usbd-serial        = "0.1.1"
 default              = ["rt", "vectored"]
 async                = ["esp-hal-common/async"]
 debug                = ["esp-hal-common/debug"]
-defmt                = ["esp-hal-common/defmt"]
+defmt                = ["esp-hal-common/defmt", "esp-println/defmt"]
 direct-boot          = ["r0"]
 eh1                  = ["esp-hal-common/eh1"]
-log                  = ["esp-hal-common/log"]
+log                  = ["esp-hal-common/log", "esp-println/log"]
 rt                   = []
 ufmt                 = ["esp-hal-common/ufmt"]
 vectored             = ["esp-hal-common/vectored"]
