--- a/esp-hal-common/Cargo.toml
+++ b/esp-hal-common/Cargo.toml
@@ -58,9 +58,10 @@ ufmt-write = { version = "0.1.0", optional = true }
 esp32   = { version = "0.26.0", features = ["critical-section"], optional = true }
 esp32c2 = { version = "0.14.0", features = ["critical-section"], optional = true }
 esp32c3 = { version = "0.17.0", features = ["critical-section"], optional = true }
-esp32c6 = { version = "0.7.0",  features = ["critical-section"], optional = true }
+# until new C6 pacs are relesed, required because of a wrong base address of GPIO_SD
+esp32c6 = { git = "https://github.com/esp-rs/esp-pacs", package = "esp32c6", rev = "1b1ce7ba631cb349a8255f5959e768d5c52fad40", version = "0.7.0",  features = ["critical-section"], optional = true }
 # until new H2 pacs are relesed, required because of https://github.com/esp-rs/esp-pacs/pull/156
-esp32h2 = { git = "https://github.com/esp-rs/esp-pacs.git", rev = "2545b66f4c11dd78dc02a3c77c44a78fa5893beb",  features = ["critical-section"], optional = true }
+esp32h2 = { git = "https://github.com/esp-rs/esp-pacs.git", rev = "1b1ce7ba631cb349a8255f5959e768d5c52fad40",  features = ["critical-section"], optional = true }
 esp32s2 = { version = "0.17.0", features = ["critical-section"], optional = true }
 esp32s3 = { git = "https://github.com/esp-rs/esp-pacs", rev = "c1283ca", features = ["critical-section",], optional = true }
 
