--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -109,6 +109,8 @@ jobs:
           cd esp32-hal/
           cargo check --examples --features=embassy,embassy-time-timg0,embassy-executor-interrupt,embassy-executor-thread,defmt
           cargo check --examples --features=embassy,embassy-time-timg0,embassy-executor-interrupt,embassy-executor-thread,log
+      - name: check esp32-hal (psram)
+        run: cd esp32-hal/ && cargo check --example=psram --features=psram_2m --release # This example requires release!
       # Ensure documentation can be built
       - name: rustdoc
         run: cd esp32-hal/ && cargo doc --features=eh1
@@ -395,6 +397,8 @@ jobs:
           cd esp32s2-hal/
           cargo check --examples --features=embassy,embassy-time-timg0,embassy-executor-interrupt,embassy-executor-thread,defmt
           cargo check --examples --features=embassy,embassy-time-timg0,embassy-executor-interrupt,embassy-executor-thread,log
+      - name: check esp32s2-hal (psram)
+        run: cd esp32s2-hal/ && cargo check --example=psram --features=psram_2m --release # This example requires release!
       # Ensure documentation can be built
       - name: rustdoc
         run: cd esp32s2-hal/ && cargo doc --features=eh1
@@ -458,8 +462,11 @@ jobs:
           cargo check --example=embassy_spi --features=embassy,embassy-time-systick,async,embassy-executor-thread
           cargo check --example=embassy_serial --features=embassy,embassy-time-systick,async,embassy-executor-thread
           cargo check --example=embassy_i2c --features=embassy,embassy-time-systick,async,embassy-executor-thread
-      - name: check esp32s3-hal (octal psram)
-        run: cd esp32s3-hal/ && cargo check --example=octal_psram --features=opsram_2m --release # This example requires release!
+      - name: check esp32s3-hal (octal psram and psram)
+        run: |  # This examples require release!
+          cd esp32s3-hal/
+          cargo check --example=octal_psram --features=opsram_2m --release
+          cargo check --example=psram --features=psram_2m --release
       - name: check esp32s3-hal (embassy, log/defmt)
         run: |
           cd esp32s3-hal/
